<resources>
    <string name="app_name">Swoosh</string>
    <string name="todo">TODO</string>
    <string name="desired_league">Desired League:</string>
    <string name="mens">Mens</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="go_all_out">GO ALL OUT</string>
    <string name="find_s_team_in_your_city_and_dominate_the_league">Find s team in your city and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="i_am_a">I am a:</string>
    <string name="womens">Womens</string>
    <string name="womens1">Womens</string>
    <string name="womens2">Womens</string>
    <string name="bgimg">TODO</string>
    <string name="co_ed">CO-ED</string>
    <string name="co_ed1">CO-ED</string>
    <string name="co_ed2">CO-ED</string>
    <string name="mens1">Mens</string>
    <string name="search_league1">Looking for a co-ed beginner near you...</string>
    <string name="looking_for_the_results">Looking for the results...</string>
</resources>