<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/desiredleaguebg"
    android:onClick="leagueNextClicked"
    tools:context=".Controller.ActivityLeague">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="165dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/swooshlogo"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints">

        <ToggleButton
            android:id="@+id/mensLeagueBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/swoosh_toogle"
            android:text="@string/mens1"
            android:textColor="#FFFCFC"
            android:textOff="@string/mens"
            android:textOn="@string/mens" />

        <ToggleButton
            android:id="@+id/womensLeagueBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/swoosh_toogle"
            android:text="@string/womens"
            android:textColor="#F4F4F4"
            android:textOff="@string/womens1"
            android:textOn="@string/womens2" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/bgimg"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/desiredleaguebg" />

        <ToggleButton
            android:id="@+id/coedBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/swoosh_toogle"
            android:text="@string/co_ed"
            android:textColor="#FDFDFD"
            android:textOff="@string/co_ed1"
            android:textOn="@string/co_ed2" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/desired_league"
        android:textAlignment="center"
        android:textColor="#FBF7F7"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/leagueBtn"
        android:layout_width="337dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/swoosh_button"
        android:fontFamily="@font/montserrat"
        android:text="NEXT"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>